# Machine-Learning-Project-2025-2026

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: DiET_Comprehensive_Comparison.ipynb  DiET_XAI_Framework.ipynb  DiET_vs_GradCAM_Image_Comparison.ipynb  DiET_vs_IntegratedGradients_Text_Comparison.ipynb  diet_comparison_colab.ipynb  diet_comparison_demo.ipynb
outputs/xai_experiments/: all_results.json
outputs/xai_experiments/cifar10/: experiment_results.json  gradcam_results.json  resnet_history.json
outputs/xai_experiments/diet_comparison/: comparison_report.txt  comparison_results.json
outputs/xai_experiments/diet_comparison/cifar10/: diet_experiment_results.json
outputs/xai_experiments/glue_sst2/: experiment_results.json  ig_results.json  training_history.json
scripts/: README.md  config.sh  download_all_data.sh  download_data.sh  download_diet_data.sh  download_htp_data.sh  download_project_data.sh  run.sh  run_xai.sh  train_all.sh  train_diet.sh  train_htp.sh  verify.py
scripts/diet_scripts/: distillation.sh  evaluate.sh  inference.sh  prepare_hard_mnist.sh  run_pipeline.sh  train_baseline.sh
scripts/diet_scripts/python/: distillation.py  evaluate.py  inference.py  prepare_hard_mnist.py  train_baseline.py
scripts/htp_scripts/: evaluate.sh  pretrain.sh  probe.sh  run_pipeline.sh
scripts/htp_scripts/python/: create_grid_dataset.py  eval_epg.py  eval_gridpg.py  get_confident_images.py
scripts/xai_experiments/: __init__.py  run_xai.sh  run_xai_experiments.py
scripts/xai_experiments/datasets/: __init__.py  image_datasets.py  text_datasets.py
scripts/xai_experiments/experiments/: __init__.py  cifar10_experiment.py  diet_experiment.py  diet_text_experiment.py  glue_experiment.py  model_comparison.py  xai_comparison.py
scripts/xai_experiments/explainers/: __init__.py  gradcam.py  integrated_gradients.py
scripts/xai_experiments/metrics/: __init__.py  attribution_metrics.py
scripts/xai_experiments/models/: __init__.py  cnn.py  transformer.py
scripts/xai_experiments/utils/: __init__.py  checkpointing.py
scripts/xai_experiments/visualization/: __init__.py  comparison_plots.py
(+13 files in other folders)
