[project]
name = "ml-project-2025-2026"
version = "0.1.0"
description = "Machine Learning Project combining DiET and how-to-probe"
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch==2.0.1",
    "torchvision==0.15.2",
    "torchaudio==2.0.2",
    "numpy==1.25.2",
    "matplotlib==3.7.2",
    "pillow==10.0.0",
    "pandas==2.0.3",
    "scikit-learn==1.3.2",
    "scipy==1.11.3",
    "seaborn==0.12.2",
    "opencv-python==4.8.0.74",
    "captum==0.6.0",
    "einops==0.6.1",
    "imageio==2.33.1",
    "lime==0.2.0.1",
    "mmcv==2.0.1",
    "mmengine==0.8.4",
    "openmim==0.3.9",
    "pycocotools==2.0.6",
    "scikit-image==0.22.0",
    "timm==0.9.7",
    "zennit==0.5.1",
    "tqdm",
    "datasets>=4.4.1",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "jupyter",
]

[tool.uv]
find-links = []

[tool.uv.sources]
mmpretrain = { git = "https://github.com/open-mmlab/mmpretrain.git", rev = "ee7f2e88501f61aa95c742dd5f429f039935ee90" }
