[project]
name = "ml-project-2025-2026"
version = "0.1.0"
description = "Machine Learning Project combining DiET and how-to-probe"
requires-python = ">=3.14.0"
dependencies = [
  "torch>=2.9.1",
  "torchvision>=0.24.1",
  "torchaudio>=2.0.2",
  "numpy>=2.3.5",
  "matplotlib>=3.10.8",
  "pillow>=12.0.0",
  "pandas>=2.3.3",
  "scikit-learn>=1.8.0",
  "scipy>=1.16.3",
  "seaborn>=0.13.2",
  "opencv-python>=4.11.0.86",
  "captum>=0.7.0",
  "einops>=0.8.1",
  "imageio>=2.37.2",
  "lime>=0.2.0.1",
  "mmengine>=0.10.7",
  "openmim>=0.3.9",
  "pycocotools>=2.0.10",
  "scikit-image>=0.25.2",
  "timm>=1.0.22",
  "zennit>=1.0.0",
  "tqdm>=4.67.1",
  "datasets>=4.4.1",
  "transformers>=4.57.3",
  "lightgbm>=4.6.0",
]

[project.optional-dependencies]
dev = ["ipython", "jupyter"]

[tool.uv]
find-links = []

[tool.uv.sources]
mmpretrain = { git = "https://github.com/open-mmlab/mmpretrain.git", rev = "ee7f2e88501f61aa95c742dd5f429f039935ee90" }
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
